Staging v0.2.0
* Update config pkg
* Update Dockerfile
* Update docker-compose.yaml
* Upgrade model v0.0.3
* Ignore *.db and container-volume
